@@ -1,3 +1,9 @@
+2013-06-17  Basic  <simsong@mucha.lan>
+
+	* src/pyxpress.h: removed 'extern' designation
+
+	* src/image_process.h (i): removed extern size_t opt_pagesize and extern size_t opt_margin. These are now phase1 configuration variables that are passed into the image_iterator.
+
 2013-06-15  Basic  <simsong@Mucha.local>
 
 	* src/scan_email.flex (Host): removed ip_written and ip_tested (always remove dead code)
